--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.6.0
+  flutter_bloc: ^8.1.6
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
+  cloud_functions: ^5.2.0
+  logger: ^2.5.0
+  rxdart: ^0.28.0
+  intl: ^0.20.1
+  cached_network_image: ^3.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
