--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.6.0
@@ -24,7 +25,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 flutter:
   uses-material-design: true
-
+  assets:
+      - assets/images/
   
   
   
