Added Google Service.json

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,17 @@
+buildscript {
+    repositories {
+        google() // Required for Firebase
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.2' // Ensure this matches your Gradle version
+        classpath 'com.google.gms:google-services:4.3.15' // Firebase services plugin
+    }
+}
+
 allprojects {
     repositories {
-        google()
+        google() // Ensure this is present
         mavenCentral()
     }
 }
