--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,8 +8,14 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>Todolity</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to photo library to select your memoji</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to camera to capture your memoji</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -36,6 +42,8 @@
 	<true/>
 	<key>Push Notifications</key>
 	<string>We need permission to send notification</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We need access to photo library to select your memoji</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string></string>
