--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   rxdart: ^0.28.0
   intl: ^0.20.1
   cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  timezone: ^0.10.0
+  firebase_storage: ^12.3.7
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
